feat: move posts component

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -10,12 +10,19 @@
 }
 
 .title {
-  margin: 0;
+  margin: 1rem 0 0 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 
-.title,
-.description {
+.short_description {
+  font-size: 1.5rem;
+}
+
+.title .short_description {
   text-align: center;
+}
+
+.photo {
+  border-radius: 50%;
 }
