--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -12,15 +12,14 @@
 .title {
   margin: 1rem 0 0 0;
   line-height: 1.15;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .short_description {
-  font-size: 1.5rem;
-}
-
-.title .short_description {
+  margin: 1rem;
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .photo {
