--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,3 +1,9 @@
+.projects_container {
+  border-top: 1px solid #eaeaea;
+  justify-content: center;
+  align-items: center;
+}
+
 .grid {
   display: flex;
   align-items: center;
@@ -8,7 +14,8 @@
 
 .card {
   flex: 1;
-  margin: 1rem;
+  margin: 0 1rem 1rem 1rem;
+  /* margin: 1rem; */
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
@@ -38,6 +45,7 @@
 }
 
 .latest_projects {
+  text-align: center;
   font-size: 1.5rem;
 }
 
