--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -6,16 +6,16 @@
 
 .grid {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   flex-wrap: wrap;
+  height: auto;
   max-width: 800px;
 }
 
 .card {
   flex: 1;
   margin: 0 1rem 1rem 1rem;
-  /* margin: 1rem; */
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
