--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,4 +1,5 @@
 .footer {
+  max-width: 800px;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
@@ -15,8 +16,4 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.logo {
-  height: 1em;
 }
